缝缝补补又三年, 持续细化